[package]
name = "sacn-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sacn-viewer"
path = "src/main.rs"

[[bin]]
name = "test_sender"
path = "test_sender.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eframe = "0.28"
egui = "0.28"
sacn = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
if-addrs = "0.13"
directories = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
